base/production/codebloom/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codebloom
spec:
  template:
    spec:
      nodeSelector:
        agentpool: prodpoolv1
      tolerations:
        - key: workload
          operator: Equal
          value: production
          effect: NoSchedule
      containers:
        - name: codebloom
