base/production/codebloom/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: codebloom-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`codebloom.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: codebloom
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: codebloom-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`codebloom.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: basic-rate-limit
      services:
        - name: codebloom
          port: 80
  tls:
    secretName: production-codebloom-tls
